[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flinx.configuration]
html_theme = 'sphinx_rtd_theme'
todo_include_todos = true

[tool.flit.metadata]
module = "flinx"
author = "Oliver Steele"
author-email = "steele@osteele.com"
home-page = "https://github.com/osteele/flinx"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    ]
description-file = "./README.rst"
requires = ["click", "flit" , "Sphinx", "sphinx-autobuild"]
# It's probably compatible with 3.0–3.4 too. I haven't tested it.
requires-python = ">=3.5"

[tool.flit.scripts]
flinx = "flinx.commands:cli"

[tool.flit.metadata.urls]
Documentation = "https://flinx.readthedocs.io/en/latest/"

[tool.poetry]
name = "flinx"
authors = ["Oliver Steele <steele@osteele.com>"]
# The following is just for test purposes. I'm not trying to keep the version
# here in sync with the version in the Python sources.
version = "0.1.0"
